Quorum3/Library/Tests/Inheritance/Pass/KidWithParent.quorum
class KidWithParent is ParentWithFields 
    action Main
        output "hi"
    end
end