Quorum3/Library/Tests/Inheritance/Fail/F.quorum
class F is E
    action Main
        
    end
end